<resources>
    <string name="app_name">QazLearn</string>
    <string name="str_next">Next</string>
    <string name="result_true">Excellent!</string>
    <string name="result_false">Oops, right answer is </string>
    <string name="translate_the_sentence">Type the English translation</string>
    <string name="translate_sentence">Translate the sentence</string>
    <string name="translation">Translation</string>
    <string name="luck">Good Luck!</string>
    <string name="translate_kz">Type the Kazakh translation</string>
    <string name="to_translate">Translate</string>
    <string name="welcome">Welcome to QazLearn</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="family">Family</string>
    <string name="loading">Loading&#8230;</string>
    <string name="education">Education</string>
    <string name="food">Food</string>
    <string name="color">Color</string>
    <string name="animal">Animals</string>
    <string name="share">Share</string>
    <string name="theme">Theme</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="hello">Hello</string>
    <string name="lessons">Lessons</string>
    <string name="achievements">Achievements</string>
    <string name="settings">Settings</string>
    <string name="check">Check</string>
    <string name="type_the_word">Type the word</string>
    <string name="login">LOG IN</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="username">Username</string>
    <string name="haveanaccount">Already have an account?</string>
    <string name="noaccoutyet">No account yet? Create one</string>
    <string name="exit">Press again to exit</string>
    <string name="notregistered">(You are not registered)</string>
    <string name="wait">Please, wait&#8230;</string>
    <string name="successful">Successful!</string>
    <string name="error">Error!</string>
    <string name="fillthefield">Please, fill the fields</string>
    <string name="offline_mode">Offline mode</string>
    <string name="notavailablelesson">The lesson will soon be available</string>
    <string name="thelessonislearned">The lesson is learned</string>
    <string name="support">Support</string>
    <string name="contactthedevelopers">Contact the developers</string>
    <string name="rateanapp">Rate the app</string>
    <string name="sharetheapp">Share the app</string>
    <string name="typetodevelopers">Type your message here</string>
    <string name="yourmessage">Your message will be shown here</string>
    <string name="responsemessage">Response will be shown here</string>
    <string name="messagesent">Message is sent successfully!</string>
    <string name="signout">Sign out</string>
    <string name="suretosignout">Are you sure?</string>
    <string name="translator">Translator</string>
    <string name="translate">Translate</string>
    <string name="mynameisshyngys">(My name is Shyngys)</string>
    <string name="whatsyourname">(What is your name?)</string>
    <string name="howoldareyou">(How old are you?)</string>
    <string name="iam15">(I am 15 age)</string>
    <string name="doyoutakeapartinfomatrix">(Do you take a part in INFOMATRIX?)</string>
    <string name="iamalsogoodluck">(I am also. Good luck!)</string>
    <string name="iamalso">Me too</string>
    <string name="mynameisabdulik">(My name is Abdulgafur)</string>
    <string name="iam16andyou">(I am 16 age. And you?)</string>
    <string name="ofcourseandyou">Of course! And you?</string>
    <string name="thanksgoodluck">(I am very glad to meet you)</string>
    <string name="helloindialog">(Hello)</string>
    <string name="toadults">(to adult male)</string>
    <string name="towoman">(Man to womans)or\n(womans to man)</string>
    <string name="tofriends">(to friends, sister, brother)</string>
    <string name="yournameisabdulik">(Your name is Abdulgafur)</string>
    <string name="hisnameisolzhas">(His name is Olzhas)</string>
    <string name="name">name</string>
    <string name="you">You</string>
    <string name="howmuch">How much</string>
    <string name="age">Age</string>
    <string name="howoldishe">How old is he?</string>
    <string name="i">I (am)</string>
    <string name="heis15age">He is 15 age</string>
    <string name="seeyou">(See you)</string>
    <string name="meet">to meet</string>
    <string name="glad">glad</string>
    <string name="heisgladtomeetyou">He is glad to meet you</string>
    <string name="also">also</string>
    <string name="heisalso">He is also</string>
    <string name="goodbye">Good bye</string>
    <string name="seeyoutomorrow">See you tomorrow</string>
    <string name="translatetokazah">Translate the word or phrase to kazakh language</string>
    <string name="previous">Previous</string>
    <string name="acquaintance">Acquaintance</string>
    <string name="your">Your</string>
    <string name="who">who?</string>
    <string name="confirmthepassword">Confirm the password</string>
    <string name="update">Update</string>
    <string name="deleteaccount">Delete account</string>
    <string name="emailconfirmation">Email confirmation</string>
    <string name="experience">Experience:</string>
    <string name="exams">Exams:</string>
    <string name="rank">Rank:</string>
    <string name="comparedcourses">Compared courses:</string>
    <string name="selectyourcountry">\"Select your country\"</string>
    <string name="selectage">\"Select your age\"</string>
    <string name="country">Country</string>
    <string name="lessonmastered">Lesson is mastered</string>
    <string name="nameing">Name</string>
    <string name="lastname">Last name</string>
    <string name="dialog">Kazakh language is one of the rich and beautiful languages of the World and it is easy to learn. You can easy and effectively via QazLearn. Let\'s start with dialog!</string>
    <string name="lestlearn">Let\'s learn!</string>
    <string name="thewholeprogresswillbelost">The whole progress will be lost</string>
    <string name="listening">This method education is litening. Click the button with icon sound and listen to the phrases or words. Then write the answer to field</string>
    <string name="listenandwrite">Let\'s listen and write</string>
    <string name="thismethodeducationiswritingwritethetranslationinKazakh">This method education is writing. Write the translation of phrase or wor in Kazakh. Practice, learn and remember!</string>
    <string name="letswrite">Let\'s write!</string>
    <string name="mynameisolzhas">(My name is Olzhas)</string>
    <string name="howtogreetinkazakh">How to greet in Kazakh?</string>
    <string name="testwhatisyourname">How to translate \"What is your name?\"?</string>
    <string name="testmynameisolzhas">How to translate \"My name is Olzhas\"?</string>
    <string name="testhowoldareyou">Choose the correct answer in Kazakh for \"How old are you?\"</string>
    <string name="testiamgladtoseeyou">How to say \"I am glad to see you\" in Kazakh?</string>
    <string name="testiamalso">How to translate \"I am also\"?</string>
    <string name="resetpassword">We have sent you instructions to email to reset your password !</string>
    <string name="reset">Reset a password</string>
    <string name="thisnameexists">Unfortunalety, this name exists</string>
    <string name="passwordsdontmatch">Passwords do not match</string>
    <string name="passwordhasbeenchanged">Password has been changed</string>
    <string name="restartapp">Please, restart QazLearn</string>
    <string name="deletingaccount">Deleting an account</string>
    <string name="thewholeprogresswillbedeleteed">The whole progress will be deleted from service</string>
    <string name="theaccountdeleted">The account is deleted</string>
    <string name="updating">Updating...</string>
    <string name="yourdatawillbeupdate">Your data will be update</string>
    <string name="accountconfirmation">Account confirmation</string>
    <string name="confirmbyclicking">Please, confirm account by clicking the button below</string>
    <string name="response">Response</string>
    <string name="nevershow">Never show</string>
    <string name="howareyou">How are you?</string>
    <string name="good">Fine, thanks!</string>
    <string name="wheredoyoulive">Where do you live?</string>
    <string name="inthecity">I live in the city, in the apartment</string>
    <string name="andyou">And you?</string>
    <string name="inthevillage">I live in the village, in the private house</string>
    <string name="comein">Ok. Come in!</string>
    <string name="youarealso">You are also!</string>
    <string name="dwelling">Dwelling</string>
    <string name="respectfulform">Respectful form</string>
    <string name="thankyou">Thanks</string>
    <string name="bad">Bad</string>
    <string name="notsobad">Not so bad</string>
    <string name="not">Not</string>
    <string name="ilivehere">I live here</string>
    <string name="here">Here</string>
    <string name="there">There</string>
    <string name="whereareyou">Where are you?</string>
    <string name="neighbor">Neighbor</string>
    <string name="we">We</string>
    <string name="heismyneighbor">He is my neighbor</string>
    <string name="but">But</string>
    <string name="privatehouse">Private house</string>
    <string name="apartment">An apartment</string>
    <string name="floor">Floor</string>
    <string name="fine">Fine</string>
    <string name="whatisthewronganswerfor">What is the wrong answer for</string>
    <string name="typeanotherone">Type another one</string>
    <string name="city">a city</string>
    <string name="ilive">I live</string>
    <string name="village">a village</string>
    <string name="youlive">You live</string>
    <string name="helives">He lives</string>
    <string name="doyouhaveabrother">Do you have a brother?</string>
    <string name="yesihave">Yes, I have</string>
    <string name="whatmannerofmanishe">What manner of man is he ?</string>
    <string name="heisatallmuscularkindman">He is a tall, muscular, good man. Character trait is kind, generous</string>
    <string name="itsclear">It\'s clear</string>
    <string name="brother">a brother</string>
    <string name="sister">a sister</string>
    <string name="mother">a mother</string>
    <string name="father">a father</string>
    <string name="grandmother">a grandmother</string>
    <string name="grandfather">a grandfather</string>
    <string name="which">which</string>
    <string name="person">person</string>
    <string name="whatmannerofmanareyou">What manner of man are you?</string>
    <string name="he">he</string>
    <string name="tall">tall</string>
    <string name="growth">growth</string>
    <string name="ashort">short</string>
    <string name="man">man</string>
    <string name="character">Character</string>
    <string name="itisnotclear">It is not clear</string>
    <string name="kind">kind</string>
    <string name="whathaveyouhadforbreakfast">What have you had for breakfast?</string>
    <string name="ihadcheeseandcoffeeforbreakfast">I had cheese and coffee for breakfast</string>
    <string name="ihadonlyteaforbreakfast">I had only tea for breakfast</string>
    <string name="whatkindoffooddoyoulike">What kind of food do you like?</string>
    <string name="ilikefishandsausage">I like fish and sausage</string>
    <string name="ilikefruit">I like fruit, because it is healthy</string>
    <string name="breakfast">breakfast</string>
    <string name="whatdidyoueat">What did you eat?</string>
    <string name="whatdidheeat">What did he eat?</string>
    <string name="what">what</string>
    <string name="toeat">to eat</string>
    <string name="cheese">a cheese</string>
    <string name="coffee">a coffee</string>
    <string name="idrank">I drank</string>
    <string name="forgotpassword">Forgot password</string>
</resources>