<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kazlingo.a1.kazlingo.Login"
    android:background="@drawable/achievmentdesign">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/appname"
        android:fontFamily="serif"
        android:textSize="60dp"
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:id="@+id/imageView12"
        android:layout_above="@+id/linearLayout2"
        android:background="#795548"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignStart="@+id/linearLayout2"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_alignEnd="@+id/linearLayout2"
        android:layout_marginTop="-20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/appname"
        android:layout_alignBottom="@+id/imageView12">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:id="@+id/imageView13"
            android:background="@drawable/lesson"
            android:layout_gravity="bottom"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:id="@+id/imageView14"
            android:background="@drawable/books"
            android:layout_gravity="bottom"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:id="@+id/imageView15"
            android:background="@drawable/books2"
            android:layout_gravity="bottom"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:id="@+id/imageView17"
            android:background="@drawable/books4"
            android:layout_gravity="bottom"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_marginBottom="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="E-mail"
            android:id="@+id/textView13"
            android:textSize="17sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

        <EditText
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtEmailLogin"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="17sp" />

        <TextView
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView32"
            android:textColor="@android:color/black"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="17sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:imeOptions="actionDone"
            android:id="@+id/txtPasswordLogin"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="17sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btnLogin"
            android:imeOptions="actionGo"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:textSize="17sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/textView21"
                android:layout_weight="3"
                android:layout_marginLeft="15dp"
                android:gravity="center" />

            <Button
                android:text="@string/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resetpassword"
                android:layout_weight="1"
                android:layout_marginRight="15dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/noaccoutyet"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/textView35"
                android:layout_weight="4"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:textSize="11sp" />

            <Button
                android:text="@string/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createaccount"
                android:layout_weight="1"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:textSize="13sp"
                android:gravity="center_vertical|center_horizontal|center" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
